<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.carlos.analisisglucosa.Paciente"
    android:background="@drawable/comunidad">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/nom"
        android:id="@+id/nom_pac"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dir_pac"
        android:hint="@string/dir"
        android:layout_below="@+id/nom_pac"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/tel_pac"
        android:layout_alignEnd="@+id/tel_pac" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/tel"
        android:ems="10"
        android:id="@+id/tel_pac"
        android:layout_below="@+id/dir_pac"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/peso_pac"
        android:hint="@string/pes"
        android:layout_below="@+id/tel_pac"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/tel_pac"
        android:layout_alignEnd="@+id/tel_pac" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/est_pac"
        android:hint="@string/est"
        android:layout_below="@+id/peso_pac"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/tel_pac"
        android:layout_alignEnd="@+id/tel_pac" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gen_pac"
        android:hint="@string/gen"
        android:layout_below="@+id/est_pac"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/tel_pac"
        android:layout_alignEnd="@+id/tel_pac" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edad_pac"
        android:hint="@string/edad"
        android:layout_below="@+id/gen_pac"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/tel_pac"
        android:layout_alignEnd="@+id/tel_pac" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/log_pac"
        android:hint="@string/log"
        android:layout_below="@+id/edad_pac"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/tel_pac"
        android:layout_alignEnd="@+id/tel_pac" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/psw_pac"
        android:hint="@string/pass"
        android:layout_below="@+id/log_pac"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/tel_pac"
        android:layout_alignEnd="@+id/tel_pac" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:id="@+id/button7"
        android:onClick="guardarPac"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



</RelativeLayout>
</ScrollView>